--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^1.9.3",
-    "expo": "~48.0.10",
+    "expo": "^48.0.10",
     "expo-auth-session": "^4.0.3",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-redux": "^8.0.5"
   },
