--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-material-cards": "^1.0.16",
+    "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
