--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "^48.0.10",
     "expo-auth-session": "^4.0.3",
+    "expo-crypto": "^12.2.2",
     "expo-status-bar": "~1.4.4",
     "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-app-auth": "^6.4.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
