--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-app-auth": "^6.4.3",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-material-cards": "^1.0.16",
     "react-native-paper": "^5.6.0",
     "react-native-platform-searchbar": "^1.2.3",
