--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-auth-session": "^4.0.3",
     "expo-crypto": "^12.2.2",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
